--- a/src/index.html
+++ b/src/index.html
@@ -58,16 +58,18 @@
   <!-- Jquery Data Table cdn  -->
   <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css"> -->
 
-
+  <link rel="stylesheet" href="/node_modules/datatables.net-dt/css/jquery.dataTables.min.css">
 
   <!-- ================================================Javascript======================================================== -->
 
   <!-- jquery + bootstrap -->
   <script src="assets/library/jquery/jquery-3.6.3.min.js"></script>
   <!-- Jquery Data Table cdn  -->
-  <!-- <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script> -->
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
   <!-- bootstrap -->
   <script src="assets/library/bootstrap/bootstrap.min.js"></script>
+
+  
   <!-- font owsome -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
   <!-- carousel -->
@@ -78,7 +80,7 @@
 
 </head>
 
-<body >
+<body>
 
 
   <app-root></app-root>
