"Navbar sticky update"

--- a/src/index.html
+++ b/src/index.html
@@ -58,16 +58,30 @@
   <!-- Jquery Data Table cdn  -->
   <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css"> -->
 
-  <link rel="stylesheet" href="/node_modules/datatables.net-dt/css/jquery.dataTables.min.css">
+
+
+
+
+
+  <!-- <link rel="stylesheet" href="/node_modules/datatables.net-dt/css/jquery.dataTables.min.css"> -->
+
+
+
+
+
 
   <!-- ================================================Javascript======================================================== -->
 
   <!-- jquery + bootstrap -->
-  <script src="assets/library/jquery/jquery-3.6.3.min.js"></script>
+  <!-- <script src="assets/library/jquery/jquery-3.6.3.min.js"></script> -->
+
+
   <!-- Jquery Data Table cdn  -->
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+  <!-- <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script> -->
+
+
   <!-- bootstrap -->
-  <script src="assets/library/bootstrap/bootstrap.min.js"></script>
+  <!-- <script src="assets/library/bootstrap/bootstrap.min.js"></script> -->
 
   
   <!-- font owsome -->
