--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"> -->
   <!-- Offline font owsome library -->
-  <link rel="stylesheet" href="assets/library/fontawesome/css/all.min.css">
+  <!-- <link rel="stylesheet" href="assets/library/fontawesome/css/all.min.css"> -->
   <!-- <link rel="stylesheet" href="assets/library/bootstrap/bootstrap-icons.css"> -->
 
   <!-- google material icon-->
