--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,9 @@
   <!-- Template Javascript -->
   <!-- <script src="assets/js/tmp.js"></script> -->
 
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>  
+
 </head>
 
 <body>
