--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>  
 
+  <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css">
+<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+
 </head>
 
 <body>
