"Project Title Updated"

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HMS V2</title>
+  <title>IsDB-BISEW Hospital | Hospital Management System - Minhazul islam </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -83,7 +83,7 @@
   <!-- bootstrap -->
   <!-- <script src="assets/library/bootstrap/bootstrap.min.js"></script> -->
 
-  
+
   <!-- font owsome -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
   <!-- carousel -->
@@ -93,7 +93,7 @@
   <!-- <script src="assets/js/tmp.js"></script> -->
 
 
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
   <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css">
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
